# orbit

./: BUILD_INSTRUCTIONS.md  LICENSE  MANIFEST.in  README.md  README_PYGAME.md  altay.json  demo.py  newUniverse.json  orbit.py  pyproject.toml  requirements.txt  run_game.sh  setup.py  space_game.py  space_game_pygame.py  test.json  test_pygame.py
loc/: de.json  en.json  es.json  fr.json  ja.json  tr.json
modules/: __init__.py  chunk_manager.py  colors.py  locale_manager.py  universe_constants.py
orbit/: __init__.py  __main__.py
orbit/loc/: de.json  en.json  es.json  fr.json  ja.json  tr.json
orbit/modules/: celestial_objects.py  enums.py  locale_manager.py  ship.py
pyOrbit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sessions/altay/: cats.json
sessions/elama/altay/: cats.json
sessions/elama/azra/: cats.json
sessions/gora/: cats.json
sessions/gora/altay/: cats.json
sessions/gora/maps/: 348246.json
universes/: 300.json  demo_universe.json  gora2.json  mySpaces.json  myspaces.json  save_demo_universe_20251027_221322.json  save_demo_universe_20251027_221755.json
universes/elama/: chunk_0_10.json  chunk_0_11.json  chunk_0_12.json  chunk_0_13.json  chunk_0_14.json  chunk_0_15.json  chunk_0_16.json  chunk_0_17.json  chunk_0_18.json  chunk_0_19.json  chunk_0_5.json  chunk_0_6.json  chunk_0_7.json  chunk_0_8.json  chunk_0_9.json  chunk_10_0.json  chunk_10_1.json  chunk_10_10.json  chunk_10_11.json  chunk_10_12.json  chunk_10_13.json  chunk_10_2.json  chunk_10_3.json  chunk_10_4.json  chunk_10_5.json  chunk_10_6.json  chunk_10_7.json  chunk_10_8.json  chunk_10_9.json  chunk_11_10.json  chunk_11_11.json  chunk_11_12.json  chunk_11_13.json  chunk_11_14.json  chunk_11_19.json  chunk_11_3.json  chunk_11_4.json  chunk_11_5.json  chunk_11_6.json  chunk_11_7.json  (+159 more)
universes/gora/: chunk_0_0.json  chunk_0_1.json  chunk_0_2.json  chunk_0_3.json  chunk_0_4.json  chunk_1_0.json  chunk_1_1.json  chunk_1_2.json  chunk_1_3.json  chunk_1_4.json  chunk_2_0.json  chunk_2_1.json  chunk_2_2.json  chunk_2_3.json  chunk_2_4.json  chunk_3_0.json  chunk_3_1.json  chunk_3_2.json  chunk_3_3.json  chunk_3_4.json  chunk_4_0.json  chunk_4_1.json  chunk_4_2.json  chunk_4_3.json  chunk_4_4.json  metadata.json
(+6 files in other folders)
